fixed header not visible issue

--- a/assets/css/donate-book.css
+++ b/assets/css/donate-book.css
@@ -11,6 +11,8 @@ body {
 }
 
 .login-box {
+  margin-top: 150px;
+  
   position: absolute;
   top: 70%;
   left: 50%;
